feat: - add endpoint for checking if user can be saved
